--- a/src/content/projects/pro-accountant.mdx
+++ b/src/content/projects/pro-accountant.mdx
@@ -1,12 +1,11 @@
 ---
-title: ProAccountant Website
+title: 齐鲁医院一站式科研平台
 summary: Professional Accounting Services Website built with Next.js, Tailwind CSS, TypeScript, and ShadCN. The site showcases accounting services, features a contact form, and offers a blog section to establish the accountant as an authority in the field.
 tags:
-    - React
-    - Next.js
-    - ContentFull
-    - Motion
-    - Tailwind
+    - Figma
+    - Web APP
+    - UX Design
+
 startDate: 2024-12-20
 endDate: 2024-12-20
 author: VicBox
