--- a/src/content/projects/finance-app.mdx
+++ b/src/content/projects/finance-app.mdx
@@ -1,12 +1,10 @@
 ---
-title: BudgetWise App
+title: 智能数字人APP
 summary: Manage your personal finances with ease using this mobile app concept. Track your expenses, set budgets, and visualize your spending habits. Built with React Native, Expo, Clerk, Firebase, and Tailwind.
 tags:
-    - React Native
-    - Expo
-    - Clerk
-    - Firebase
-    - Tailwind
+    - APP UI
+    - Figma
+    
 startDate: 2024-04-07
 endDate: 2024-04-09
 author: John Doe
